<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/standard_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_details_title"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/result_user_id"
        style="@style/UserDetailsItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_details_id"/>

    <TextView
        android:id="@+id/result_username"
        style="@style/UserDetailsItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_details_username"/>

    <TextView
        android:id="@+id/result_password"
        style="@style/UserDetailsItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_details_password"/>

    <TextView
        android:id="@+id/result_name"
        style="@style/UserDetailsItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_details_name"/>

</LinearLayout>